--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
     <main>
         <p>There’s lots of ways to be, as a person. And some people express their deep appreciation in different ways. But one of the ways that I believe people express their appreciation to the rest of humanity is to make something wonderful and put it out there.</p>
         <p>And you never meet the people. You never shake their hands. You never hear their story or tell yours. But somehow, in the act of making something with a great deal of care and love, something’s transmitted there. And it’s a way of expressing to the rest of our species our deep appreciation. So we need to be true to who we are and remember what’s really important to us.</p>
-        <p>Announcing <strong><a href="https://new-ui.com/templates/coming-soon">coming soon</a></strong> template, a simple coming soon page for better pre-launch conversions.</p>
+        <p>Announcing <strong><a href="https://bublr.life">Bublr</a></strong>, a platform designed to not just interact but to experience</p>
         <ul>
-            <li>Vanilla HTML, CSS, & Vite.</li>
+            <li>You own you're data, not us!</li>
             <li>Effortless customization.</li>
-            <li>Light & dark themes.</li>
-            <li>Pay what you want, own forever.</li>
+            <li>Scalable / Affordable.</li>
+            <li>Enterprise or Individuals, we have it covered</li>
         </ul>
-        <p>We’ll be launching in early 20xx. Stay tuned.</p>
+        <p>We’ll be launching in early 2025. Stay tuned.</p>
         <figure>
             <img src="/signature.svg" alt="sign" width="171" height="39">
         </figure>
         <dl>
-            <dt>Abhimanyu Rana</dt>
-            <dd>Creator, New UI</dd>
-            <dd><a href="mailto:contact@new-ui.com">contact@new-ui.com</a></dd>
+            <dt>Solomon Shalom Lijo</dt>
+            <dd>Co-Founder [at] Bublr</dd>
+            <dd><a href="mailto:solomon@Bublr.life">solomon@Bublr.life</a></dd>
         </dl>
         <p role="complementary" aria-label="P.S.">
-            <strong>P.S.</strong> Join our waiting list to be notified when we launch. We’ll destroy the list after the announcement, and it won’t be used for anything else.
+            <strong>P.S.</strong> Join our waiting list to be notified when we launch.
         </p>
 
         <section>
