--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <meta property="og:site_name" content="Coming Soon, Template">
     <meta property="og:title" content="Coming Soon, Template">
     <meta property="og:description" content="A simple coming soon page for better pre-launch conversions.">
-    <meta property="og:url" content="https://new-ui.com/templates/coming-soon">
+    <meta property="og:url" content="https://cm.bbb.bot">
     <meta property="og:type" content="website">
 
     <meta name="twitter:title" content="Coming Soon, Template">
     <meta name="twitter:description" content="A simple coming soon page for better pre-launch conversions.">
     <meta name="twitter:creator" content="@NewDesignFile">
     <meta name="twitter:image:alt" content="">
-    <link rel="canonical" href="https://new-ui.com/templates">
+    <link rel="canonical" href="https://cm.bbb.bot">
 </head>
 
 <body>
@@ -52,17 +52,17 @@
             <li>Scalable / Affordable.</li>
             <li>Enterprise or Individuals, we have it covered</li>
         </ul>
-        <p>We’ll be launching in early 2025. Stay tuned.</p>
+        <p>We are launching gradually! Stay tuned.</p>
         <figure>
             <img src="/signature.svg" alt="sign" width="171" height="39">
         </figure>
         <dl>
             <dt>Solomon Shalom Lijo</dt>
-            <dd>Co-Founder [at] Bublr</dd>
-            <dd><a href="mailto:solomon@Bublr.life">solomon@Bublr.life</a></dd>
+            <dd>Co-Founder [at] BBB</dd>
+            <dd><a href="mailto:solomon@bbb.bot">solomon@bbb.bot</a></dd>
         </dl>
         <p role="complementary" aria-label="P.S.">
-            <strong>P.S.</strong> Join our waiting list to be notified when we launch.
+            <strong>P.S.</strong> Join our waiting list if you'd like to try this out for you're agency!
         </p>
 
         <section>
