--- a/index.html
+++ b/index.html
@@ -8,49 +8,49 @@
     <meta name="handheldfriendly" content="true">
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
-    <title>Coming Soon, Template</title>
+    <title>BBB</title>
     <link rel="stylesheet" href="style.css">
 
-    <meta name="description" content="A simple coming soon page for better pre-launch conversions.">
-    <meta name="author" content="@NewDesignFile">
-    <meta name="copyright" content="Method Black">
+    <meta name="description" content="Crafting AI Interfaces for Governments">
+    <meta name="author" content="@_bbb.bot">
+    <meta name="copyright" content="BlockByBlock | BBB">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <meta property="og:site_name" content="Coming Soon, Template">
-    <meta property="og:title" content="Coming Soon, Template">
-    <meta property="og:description" content="A simple coming soon page for better pre-launch conversions.">
-    <meta property="og:url" content="https://cm.bbb.bot">
+    <meta property="og:site_name" content="BlockByBlock | BBB">
+    <meta property="og:title" content="BBB">
+    <meta property="og:description" content="Crafting AI Interfaces for Governments">
+    <meta property="og:url" content="https://bbb.bot">
     <meta property="og:type" content="website">
 
-    <meta name="twitter:title" content="Coming Soon, Template">
-    <meta name="twitter:description" content="A simple coming soon page for better pre-launch conversions.">
-    <meta name="twitter:creator" content="@NewDesignFile">
+    <meta name="twitter:title" content="BlockByBlock | BBB">
+    <meta name="twitter:description" content="Crafting AI Interfaces for Governments">
+    <meta name="twitter:creator" content="@_bbb.bot">
     <meta name="twitter:image:alt" content="">
-    <link rel="canonical" href="https://cm.bbb.bot">
+    <link rel="canonical" href="https://bbb.bot">
 </head>
 
 <body>
     <header>
         <h1>
             <a href="/" aria-label="Coming Soon">
-            <span>Coming Soon</span>
+            <span>BBB</span>
             <img src="logo.svg" alt="Coming Soon Template" width="96" height="48">
             </a>
         </h1>
     </header>
     <main>
         <p>There’s lots of ways to be, as a person. And some people express their deep appreciation in different ways. But one of the ways that I believe people express their appreciation to the rest of humanity is to make something wonderful and put it out there.</p>
-        <p>And you never meet the people. You never shake their hands. You never hear their story or tell yours. But somehow, in the act of making something with a great deal of care and love, something’s transmitted there. And it’s a way of expressing to the rest of our species our deep appreciation. So we need to be true to who we are and remember what’s really important to us.</p>
-        <p>Announcing <strong><a href="https://bublr.life">Bublr</a></strong>, a platform designed to not just interact but to experience</p>
+        <p>We are taking ideas from the personal computer, web browser, and latest in Al, to create a computing experience that's powerful yet delightfully human..</p>
+        <p>Announcing <strong><a href="https://bbb.bot">BBB</a></strong>, a AI platform that help governments, be effecient</p>
         <ul>
-            <li>You own you're data, not us!</li>
-            <li>Effortless customization.</li>
-            <li>Scalable / Affordable.</li>
-            <li>Enterprise or Individuals, we have it covered</li>
+            <li>Private, secure data</li>
+            <li>Real-time solutions, at your fingertips</li>
+            <li>Scalable across agencies</li>
+            <li>Empowering voices, simplifying bureaucracy</li>
         </ul>
         <p>We are launching gradually! Stay tuned.</p>
         <figure>
@@ -59,10 +59,10 @@
         <dl>
             <dt>Solomon Shalom Lijo</dt>
             <dd>Co-Founder [at] BBB</dd>
-            <dd><a href="mailto:solomon@bbb.bot">solomon@bbb.bot</a></dd>
+            <dd><a href="mailto:solomon@_bbb.bot">solomon@_bbb.bot</a></dd>
         </dl>
         <p role="complementary" aria-label="P.S.">
-            <strong>P.S.</strong> Join our waiting list if you'd like to try this out for you're agency!
+            <strong>P.S.</strong> Join our waiting to fly w/ us!
         </p>
 
         <section>
