--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <p>There’s lots of ways to be, as a person. And some people express their deep appreciation in different ways. But one of the ways that I believe people express their appreciation to the rest of humanity is to make something wonderful and put it out there.</p>
         <p>We are taking ideas from the personal computer, web browser, and latest in Al, to create a computing experience that's powerful yet delightfully human..</p>
-        <p>Announcing <strong><a href="https://bbb.bot">BBB</a></strong>, a AI platform that help governments, be effecient</p>
+        <p>Announcing <strong><a href="https://demo.bbb.bot">BBB</a></strong>, a AI platform that help governments, be effecient</p>
         <ul>
             <li>Private, secure data</li>
             <li>Real-time solutions, at your fingertips</li>
@@ -59,7 +59,7 @@
         <dl>
             <dt>Solomon Shalom Lijo</dt>
             <dd>Co-Founder [at] BBB</dd>
-            <dd><a href="mailto:solomon@_bbb.bot">solomon@_bbb.bot</a></dd>
+            <dd><a href="mailto:solomon@_bbb.bot">solomon@bbb.bot</a></dd>
         </dl>
         <p role="complementary" aria-label="P.S.">
             <strong>P.S.</strong> Join our waiting to fly w/ us!
